[gd_scene load_steps=2 format=3 uid="uid://i3mqugs01pil"]

[ext_resource type="Script" path="res://scenes/keymap_submenu.gd" id="1_nttjs"]

[node name="KeyMapSubMenu" type="ScrollContainer" node_paths=PackedStringArray("mouse_sensitivity_label", "mouse_sensitivity_slider")]
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("1_nttjs")
mouse_sensitivity_label = NodePath("VBoxContainer/Mouse Sensitivity/HBoxVontainer/Value")
mouse_sensitivity_slider = NodePath("VBoxContainer/Mouse Sensitivity/HBoxVontainer/DPISlider")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Mouse Sensitivity" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxVontainer" type="HBoxContainer" parent="VBoxContainer/Mouse Sensitivity"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Mouse Sensitivity/HBoxVontainer"]
layout_mode = 2
text = "sensitivity"

[node name="DPISlider" type="HSlider" parent="VBoxContainer/Mouse Sensitivity/HBoxVontainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 5.0
step = 0.01
value = 0.5

[node name="Value" type="Label" parent="VBoxContainer/Mouse Sensitivity/HBoxVontainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Mouse Sensitivity"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="default" type="Button" parent="VBoxContainer/Mouse Sensitivity/HBoxContainer"]
layout_mode = 2
text = "default"

[node name="reset" type="Button" parent="VBoxContainer/Mouse Sensitivity/HBoxContainer"]
layout_mode = 2
text = "reset"

[connection signal="value_changed" from="VBoxContainer/Mouse Sensitivity/HBoxVontainer/DPISlider" to="." method="mouse_sensitivity_slider_change"]
[connection signal="value_changed" from="VBoxContainer/Mouse Sensitivity/HBoxVontainer/DPISlider" to="." method="slider_change" binds= ["MOUSE_SENSITIVITY"]]
[connection signal="pressed" from="VBoxContainer/Mouse Sensitivity/HBoxContainer/default" to="." method="set_to_default" binds= ["MOUSE_SENSITIVITY"]]
[connection signal="pressed" from="VBoxContainer/Mouse Sensitivity/HBoxContainer/reset" to="." method="reset" binds= ["MOUSE_SENSITIVITY"]]
